styles.css
:root {
  --orange: #C2643F;
  --bg-light: #fff;
  --text-dark: #333;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    position: relative;
    overflow-x: hidden;
    font-family: "Outfit", serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-size: 1.1rem;
    font-style: normal;
    font-stretch: expanded;
    color: var(--orange);
    background-color: var(--bg-light);
}

a, p, button {
    font-size: 1.1rem;
}

#index {
    position: relative;
    overflow-x: hidden;
}

header, footer {
    height: 100vh;
    position: relative;
    overflow: hidden;
}

#index header > video {
    position: absolute;
    bottom: 0;
}

#index footer > video {
    position: absolute;
    top: 0;
}

#index footer {
    height: 100vh;
}

#index header > video::-webkit-media-controls, #index footer > video::-webkit-media-controls {
    display: none !important;
}

/* HEADER / FOOTER TEXT */

.header-title, .footer-content {
    height: 80vh;
    width: 70vw;
    display: flex;
    flex-direction: column;
    z-index: 99;
}

.header-title {
    justify-content: center;
    align-items: start;
}

.header-title p {
    width: 23vw;
}

.footer-content {
    justify-content: space-between;
    align-items: start;
}

.footer-content a {
    color: var(--orange);
    text-decoration: none;
}

.footer-icon {
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: .7rem;
}

.insta-icon, .email-icon {
    width: 40px;
    height: 40px;
}

.email-icon {
    height: auto;
}


.footer-icon.email:hover {
    .email-icon-text {
        color: var(--text-dark);
        transition: .1s;
    }

    .uuid-c254b6b3-7717-414d-aaa1-7be0dde3b3a2 {
        fill: #333;
        transition: .1s;
    }
}

.footer-icon.insta:hover {
    .insta-icon-text {
        color: var(--text-dark);
        transition: .1s;
    }

    .uuid-3778e105-bb82-4c85-8223-9a1ad7578745 {
        fill: #333;
        transition: .1s;
    }
}


.footer-content-contact {
    padding-top: 30%;
    display: flex;
    flex-direction: column;
    gap: 1.2rem;
}

.header-title-text {
    width: 40vw;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: 1.2rem;
    justify-content: space-between;
}

.header-title-text div {
    padding-top: 20vh;
}

.header-title-text p {
    justify-self: flex-end;
}

.header-title-text h1 {
    font-size: 6.5rem;
    font-weight: 500;
    letter-spacing: .1rem;
}

.footer-content-contact h2, .project-page h2, .header-title h2 {
    font-size: 2.5rem;
    font-weight: 500;
}

.footer-content-copyright {
    font-size: x-small;
}

.section {
    display: flex;
    justify-content: center;
    align-items: center;
}


.header video, .footer video {
    position: absolute;
    min-width: 100%; 
    overflow-x: hidden;
}


/* NAV BAR */
.main-nav {
  position: fixed;
  height: 80vh;
  right: 7%;
  top: 50%;
  transform: translateY(-50%);
  writing-mode: vertical-rl;
  z-index: 9999;
}

.main-nav .overlay-menu {
  list-style: none;
  display: flex;
  justify-content: end;
}

.main-nav .overlay-menu a {
  text-decoration: none;
  color: var(--orange);
  margin: 1rem;
}

.main-nav ul li a:hover,
.main-nav ul li a.active {
  color: var(--text-dark);
}

.icon, .close-btn {
    display: none;
}

@media (max-width: 680px) {
  .icon, .close-btn {
    display: block;
  }

  /* Hide nav links unless inside overlay */
  .main-nav ul > li:not(.icon) {
    display: none;
  }



  /* NAV OVERLAY */
    .main-nav {
        position: fixed;
        width: 100vw;
        height: 100vh;
        right: 0;
        writing-mode: horizontal-tb;
        z-index: 3;
    }

    .overlay {
        display: none; /* Hidden by default */
        top: 0;
        left: 0;
        height: 100vh;
        width: 100vw;
    }

    .main-nav.active {
        z-index: 999;
    }

    /* Show overlay when active */
    .overlay.active {
        background-color: rgba(0, 0, 0, 0.85);
        display: flex;
        position: fixed;
        position: absolute;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        z-index: 999;
    }

    .overlay.active .overlay-menu li {
        display: flex;
    }

    .overlay.active .overlay-menu a:hover, .overlay.active .overlay-menu a.active {
        color: var(--bg-light);
    }

    /* Overlay nav menu */
    .overlay-menu {
        display: flex;
        flex-direction: column;
    }

    /* Close button */
    .close-btn, .open-btn {
        position: fixed;
        top: 1rem;
        right: 1rem;
        font-size: 2rem;
        background: none;
        border: none;
        
        cursor: pointer;
    }

    .close-btn {
        color: white;
    }

    .open-btn {
        color: var(--orange);
    }
}

/* MAIN LAYOUT */

        main {
            width: 100vw;
            min-height: 100vh;
            height: fit-content;
            display: flex;
            align-items: flex-start;
            justify-content: center;
        }

        #portfolio {
            width: 70vw;
            max-height: fit-content;
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            justify-content: flex-start;
            padding-top: 15vh;
            gap: 1.2rem;
        }

/* PORTFOLIO GALLERY FILTERS */

        .filters {
            display: flex;
            align-items: center;
            justify-content: center;
            gap: 1rem;
        }

        .filters .filter-btn {
            cursor: pointer;
            background-color: transparent;
            border: none;
            color: var(--orange);
            font-family: "Outfit", serif;
            font-size: 1.2rem;
            z-index: 100;
        }

        .filters .filter-btn:hover, .filters .filter-btn.active {
            color: var(--text-dark);
        }

        .filters .filter-btn:hover {
            transition: 1s;
        }
/* ... */

